--- a/index.phtml
+++ b/index.phtml
@@ -20,6 +20,7 @@ require_once 'session.php';
     <div>
         <?php require_once 'section/retroaction.phtml'; ?>
 
+        <div class="boite-de-contenu">test</div>
         Vous n'êtes pas obligé de prendre cette structure de page... vous êtes libre de faire comme vous le voulez.
     </div>
 
