--- a/index.phtml
+++ b/index.phtml
@@ -17,11 +17,24 @@ require_once 'session.php';
 <body>
     <?php require_once 'section/entete.phtml'; ?>
 
-    <div>
+    <div class="max">
         <?php require_once 'section/retroaction.phtml'; ?>
 
-        <div class="boite-de-contenu">test</div>
-        Vous n'êtes pas obligé de prendre cette structure de page... vous êtes libre de faire comme vous le voulez.
+        <div>
+                <h2>Bienvenue sur Point final!</h1>
+        </div>
+        <div class="conteneur-boites">
+                <div class="boite-de-contenu">
+                    <p>Point final est simplement un site qui répertorie les résultats des parties jouées sur l'arcade du département afin de pouvoir "remettre dans la face" de ses adversaires leurs défaites!</p>
+                </div>
+        </div>
+
+        <div class="conteneur-boites">
+            <div class="boite-de-contenu">test</div>
+            <div class="boite-de-contenu">test</div>
+            <div class="boite-de-contenu">test</div>
+            <div class="boite-de-contenu">test</div>
+        </div>
     </div>
 
     <?php require_once 'section/pied.phtml'; ?>
