--- a/section/pied.phtml
+++ b/section/pied.phtml
@@ -1,5 +1,3 @@
 <footer>
-    <div>
-        <p>&copy; 2025 Point final</p>
-    </div>
+    &copy; 2025 Point final, visuel par Marie-Ève Bouchard
 </footer>
