--- a/index.phtml
+++ b/index.phtml
@@ -2,15 +2,24 @@
 require_once "config.php";
 require_once 'session.php';
 
+// initialisation des DAO
 $jeuDao = new JeuDao($config);
 $partieDao = new PartieDao($config);
+$statDao = new StatistiqueDao($config);
 $utilisateurDao = new UtilisateurDao($config);
 
 //$infos[] = "Un message d'information";
 //$erreurs[] = "Un message d'erreur";
+
+// Récupération des informations pour les variables à afficher
+$classement = $statDao->selectClassementGlobal();
+if (!empty($classement)) {
+    $meilleur = $classement[0];
+}
 $nbJoueurs = $utilisateurDao->compterJoueurs();
 $nbParties = $partieDao->compterParties();
 $nbJeux = $jeuDao->compterJeux();
+
 ?>
 
 <!DOCTYPE html>
@@ -40,7 +49,7 @@ $nbJeux = $jeuDao->compterJeux();
                     <div class="boite-de-contenu"><h3><?= $nbJoueurs ?></h3><br>Joueurs</div>
                     <div class="boite-de-contenu"><h3><?= $nbJeux ?></h3><br>JEUX</div>
                     <div class="boite-de-contenu"><h3><?= $nbParties ?></h3><br>Parties jouées</div>
-                    <div class="boite-de-contenu">test</div>
+                    <div class="boite-de-contenu"><h4><?= $meilleur->getNomComplet() ?></h4><br>Meilleur joueur actuel</div>
                 </div>
             </div>
         <?php require_once 'section/pied.phtml'; ?>
