--- a/section/entete.phtml
+++ b/section/entete.phtml
@@ -1,4 +1,15 @@
 <header>
-    <img src="assets/img/logo.webp" alt="Logo" width="100px" height="100px" />
-    <h1 style="display: inline;">Menu...</h1>
+    <nav id="menu-principal">
+        <ul>
+            <li class="logo">
+                <a href="index.phtml">
+                    <img src="assets/img/logo.webp" alt="Logo" width="100" height="100" />
+                </a>
+            </li>
+            <li><a href="classement.phtml" class="boite-de-contenu clickable">Classement</a></li>
+            <li><a href="parties.phtml" class="boite-de-contenu clickable">Toutes les parties</a></li>
+            <li><a href="connexion.phtml" class="boite-de-contenu clickable">Connexion</a></li>
+            <li><a href="inscription.phtml" class="boite-de-contenu clickable">Inscription</a></li>
+        </ul>
+    </nav>
 </header>
