--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,25 +1,3 @@
-.zone-erreur {
-    border: 1px solid red;
-    border-radius: 0.5rem;
-    padding: 0.5rem;
-    border-style: dotted;
-    color: red;
-    font-size: medium;
-    font-style: italic;
-    margin-bottom: 2rem!important;
-}
-
-.zone-info {
-    border: 1px solid green;
-    border-radius: 0.5rem;
-    padding: 0.5rem;
-    border-style: dotted;
-    color: green;
-    font-size: medium;
-    font-style: italic;
-    margin-bottom: 2rem!important;
-}
-  
 * {
     margin: 0;
     padding: 0;
@@ -45,30 +23,6 @@ body {
 }
 html, body {
     height: 100%;
-}
-
-button {
-    margin: 10px;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    border: none;
-    border-radius: 5px;
-    color: white;
-    font-family: "nelson-engraved", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-}
-.vert-btn {
-    background: green;
-}
-
-.rouge-btn {
-    background: red;
-}
-.jaune-btn {
-    background: yellow;
-    color: black;
 }
 
 h1, h2, h3, h4 {
@@ -150,7 +104,7 @@ p {
     /* Effet de lumière néon autour de la boîte */
     box-shadow: 0 0 10px #ff00c8, 0 0 10px #00e0ff;
     text-align: center;
-    transition: background-image 0.4s ease, transform 0.3s ease;
+    transition: background-image 0.5s ease, transform 0.4s ease;
 }
 /* Sur background-image on peut appliquer une image, 
 un dégradé css, un motif css répété 
@@ -163,6 +117,7 @@ ou une forme SVG url("data:image/svg+xml,...")*/
         linear-gradient(to right, #ff00c8, #00e0ff); /* Toujours le même contour */
     transform: scale(1.1);
     cursor: pointer;
+    transition: transform 0.2s ease-in-out;
 }
 
 footer {
@@ -189,4 +144,35 @@ footer {
     border: 1px solid rgba(0,0,0,0.1);
 
     box-shadow: 0 0 15px #00ffff88;
+}
+nav#menu-principal {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin: 1rem auto 2rem auto;
+}
+
+nav#menu-principal ul {
+    display: flex;
+    gap: 15px;
+    list-style: none;
+    padding: 0;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+nav#menu-principal a.boite-de-contenu {
+    display: block;
+    padding: 10px 20px;
+    font-size: 1.2rem;
+    text-decoration: none;
+    text-align: center;
+    color: black;
+    min-width: 140px;
+}
+.logo:hover{
+    transform: scale(1.2);
+    transition: transform 0.2s ease-in-out;
+    cursor: pointer;
 }
