--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,17 +8,17 @@
     font-style: normal;
 
     text-shadow:
-    1px 1px 0 white, /* faux gras blanc (léger contour) */
+    /* 1px 1px 0 white,  faux gras blanc (léger contour) */
     2px 2px 6px rgba(0, 0, 0, 0.8); /* vraie ombre sombre */
     letter-spacing: 0.05em;
 }
 body {
     background-color: #000000;
     color: white;
-    background-image: url('../img/Mix2.png'); /* adapte le chemin */
+    background-image: url('../img/Mix2.png');
     background-size: cover;
     background-position: center;
-    background-attachment: fixed; /* pour un effet plus "pro" */
+    background-attachment: fixed;
     padding-bottom: 70px;
 }
 html, body {
@@ -118,6 +118,8 @@ ou une forme SVG url("data:image/svg+xml,...")*/
     transform: scale(1.1);
     cursor: pointer;
     transition: transform 0.2s ease-in-out;
+    text-shadow:
+    2px 2px 0 white;
 }
 
 footer {
@@ -125,7 +127,7 @@ footer {
     bottom: 0;
     left: 0;
     width: 100%;
-    background-color: #000000; /* ou autre fond foncé */
+    background-color: #000000;
 
     color: white;
     text-align: center;
@@ -137,7 +139,7 @@ footer {
 
 .contenu {
     max-width: 1200px;
-    min-height: 85vh;
+    height: 90vh;
     margin: auto;
     background-color: rgba(0, 0, 0, 0.6);
     padding: 2rem;
@@ -145,6 +147,7 @@ footer {
 
     box-shadow: 0 0 15px #00ffff88;
 }
+
 nav#menu-principal {
     display: flex;
     justify-content: center;
@@ -199,9 +202,15 @@ table a:hover {
 }
 
 table tr:nth-child(even) {
-    background-color: #c795db; /* gris pâle */
+    background-color: #d7a1ec;
 }
 
 table tbody tr:hover {
-    background-color: #375698; /* surbrillance plus visible au survol */
+    background-color: #375698;
+}
+
+form {
+    text-align: right;
+    margin: 0 auto; /* centre horizontalement */
+    max-width: 400px; /* limite la largeur pour un affichage plus propre */
 }
