Ajoute d'une vérification finale de connexion juste avant d'envoyer une requete a la bd

--- a/ajouterPartie.phtml
+++ b/ajouterPartie.phtml
@@ -35,6 +35,9 @@ if (isset($_POST['bouton-ajouter'])) {
     } if ((int)$score1 < 0 || (int)$score2 < 0) {
         $erreurs[] = "Les scores doivent être supérieurs ou égaux à 0.";
     }
+    if (!$utilisateurConnecte || $utilisateurConnecte->getRoleId() !== 1) {
+        $erreurs[] = "Vous devez être connecté en tant qu’administrateur pour ajouter une partie.";
+    }
 
     if (empty($erreurs)) {
         $partie = new Partie(
